# qm2

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE  README.md  help.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  qm2-v1.1.py  requirements.txt  sitemap.xml  test.json
.github/workflows/: ci.yml  pipeline.yml  publish.yml  release-test.yml  release.yml  tests.yml
dev/: index.html
docs/: dev.md  guide.md  index.md  reference.md
examples/: gist.txt  sample_questions.csv  sample_questions.json
guide/: index.html
reference/: index.html
search/: search_index.json
src/qm2/: __main__.py  app.py  diagnose.py  paths.py
src/qm2/core/: categories.py  engine.py  import_export.py  questions.py  scores.py  templates.py  validation.py
src/qm2/ui/: display.py
src/qm2/utils/: __init__.py  files.py  updater.py
stylesheets/: extra.css
tests/: conftests.py  test_app_brute_force.py  test_app_coverage.py  test_app_exhaustive.py:  test_app_final.py  test_app_loops.py  test_app_loops_final.py  test_app_questions_logic.py  test_app_remote_final.py  test_app_remote_logic.py  test_app_submenus.py  test_app_tools_logic.py  test_categories_coverage.py  test_categories_critical.py  test_categories_final.py  test_core_questions_missing.py  test_coverage_booster.py  test_edit_fix.py  test_engine.py  test_engine_coverage.py  test_files.py  test_final_coverage.py  test_final_push.py  test_import_export.py  test_import_export_errors.py  test_import_export_processing.py  test_import_export_simple.py  test_import_remote_file.py  test_integration.py  test_main_entry.py  test_paths.py  test_performance.py  test_questions.py  test_remote_coverage.py  test_rename_category.py  test_scores.py  test_select_category.py  test_templates.py  test_ui_display.py  test_updater.py  (+3 more)
