[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qm2"
version = "0.1.0"
description = "Terminal quiz & flashcards aplikacija (Rich + Questionary UI)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "Adnan", email = "you@example.com" }
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Education"
]

dependencies = [
  "rich>=13",
  "questionary>=2",
  "requests>=2"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=5",
  "pre-commit>=3",
  "bandit>=1.7"
]

[project.scripts]
qm2 = "qm2.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "B", "C4", "SIM", "UP", "PIE"]
exclude = ["categories", "csv"]

[tool.ruff.format]
quote-style = "double"

