[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qm2"
version = "0.1.1"
description = "CLI-based quiz maker application with categories and import/export support."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Adnan Halvadžija", email = "halvadzija.adnan@gmail.com" }
]
keywords = ["quiz", "cli", "education", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/ahalvadzija/qm2"
Bug Tracker = "https://github.com/ahalvadzija/qm2/issues"

[tool.setuptools.packages.find]
where = ["src"]

