[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qm2"
version = "1.0.16"
description = "CLI-based quiz maker application with categories and import/export support."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Adnan Halvadžija", email = "halvadzija.adnan@gmail.com" }
]
keywords = ["quiz", "cli", "education", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "requests>=2.31.0",
    "platformdirs>=4.2"
]

[project.urls]
Homepage = "https://github.com/ahalvadzija/qm2"
"Bug Tracker" = "https://github.com/ahalvadzija/qm2/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qm2 = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
qm2 = "qm2.__main__:main"

[tool.bumpver]
current_version = "1.0.17"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',  # English: This ensures the project version is also updated
]
"README.md" = [
    "{version}",
]
